fix: update compliance file

--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: PIA_STATUS_HERE
+    status: TBD
     last-updated: '2023-02-15T17:14:51.789Z'
   - name: STRA
-    status: STRA_STATUS_HERE
+    status: TBD
     last-updated: '2023-02-15T17:14:51.789Z'
